--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "rollup-plugin-copy-glob": "^0.3.1"
+  },
   "devDependencies": {
     "@open-wc/building-rollup": "^0.19.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
