--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rollup-plugin-copy-glob": "^0.3.1"
+    "rollup-plugin-copy-glob": "^0.3.1",
+    "workbox-build": "^4.3.1",
+    "workbox-sw": "^4.3.1"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^0.19.1",
