--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "testing",
+  "name": "testingarapp",
   "version": "1.0.0",
-  "description": "Test",
+  "description": "Go to this webpage  https://asnow4u.github.io/TestingARapp/",
   "main": "index.html",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/asnow4u/TestingARapp.git"
   },
+
   "scripts": {
     "start": "es-dev-server --node-resolve --app-index index.html --open",
     "start:build": "es-dev-server dist/ --open",
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "rollup-plugin-copy-glob": "^0.3.1",
     "workbox-build": "^4.3.1",
@@ -26,6 +25,8 @@
     "rimraf": "^3.0.0",
     "rollup": "^1.29.1"
   },
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/asnow4u/TestingARapp/issues"
   },
